tests/language_modules/04_types/invalid_semantics/keyword_record_field_name.vf
module KeywordRecordFieldName

type Payload is record
    module: Integer
end record

end KeywordRecordFieldName